#102889 Bullentinboard and Calendar can have enddate before startdate

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/BulletinBoard/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/BulletinBoard/_Input.cshtml
@@ -137,8 +137,9 @@
             var fromDate = $("#divBulletinBoard_ShowDate").datepicker('getDate');
             var endDate = $("#divBulletinBoard_ShowUntilDate").datepicker('getDate');
             if (Date.parse(endDate) >= Date.parse(fromDate)) {
-                return isValid;
+                return true;
             }
+            return false;
 
         }, '@Translation.GetForJS("Var vänlig ange ett giltigt datum")');
 
