--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Calendar/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Calendar/_Input.cshtml
@@ -199,7 +199,8 @@
                 },
                 "Calendar.ShowFromDate": {
                     'required': true,
-                    'date': true
+                    'date': true,
+                    'checkStartDate': true
                 },
                 "Calendar.ShowUntilDate": {
                     'required': true,
@@ -222,6 +223,7 @@
                 'Calendar.ShowFromDate': {
                     required: '@( string.Format("{0} {1}", Translation.GetForJS("Du måste ange"), Translation.GetForJS("Visa fr.o.m") ))',
                     date: '@Translation.GetForJS("Var vänlig ange ett giltigt datum")',
+                    checkStartDate: '@Translation.GetForJS("Var vänlig ange ett giltigt datum")'
                 },
                 'Calendar.ShowUntilDate': {
                     required: '@( string.Format("{0} {1}", Translation.GetForJS("Du måste ange"), Translation.GetForJS("Visa t.o.m") ))',
@@ -249,6 +251,16 @@
         var fromDate = $("#divCalendar_ShowFromDate").datepicker('getDate');
         var endDate = $("#divCalendar_ShowUntilDate").datepicker('getDate');
         if (Date.parse(endDate) >= Date.parse(fromDate)) {
+            return true;
+        }
+        return false;
+
+    }, '@Translation.GetForJS("Var vänlig ange ett giltigt datum")');
+
+        $.validator.addMethod('checkStartDate', function (value, element, param) {
+        var today = $("#divCalendar_CalendarDate").datepicker('getDate');
+        var fromDate = $("#divCalendar_ShowFromDate").datepicker('getDate');
+        if (Date.parse(fromDate) >= Date.parse(today)) {
             return true;
         }
         return false;
