--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/EditCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/EditCategory.cshtml
@@ -30,7 +30,7 @@
                     {
                         <li>
                                 @Html.ActionLink(Translation.GetCoreTextTranslation("Ta bort"), "#", new { id = Model.Id },
-                                new { @class = "btn deleteDeniedDialog", deleteDialogText = Translation.GetCoreTextTranslation("Det går inte att ta bort en kategori som är kopplat till en eller flera FAQ") })
+                                new { @class = "btn deleteDeniedDialog", deleteDialogText = Translation.GetCoreTextTranslation("Det går inte att ta bort en kategori som är kopplad till en eller flera FAQ") })
                         </li>
                     }
                     else
