#117376 - Task - Change error message

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Error/BusinessLogicError.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Error/BusinessLogicError.cshtml
@@ -15,10 +15,12 @@
             @DateTime.Now
         </p>
         <p style="margin: 10px 0;">
-            Please provide Error Id to support team:
+            Please provide below to your support team:
         </p>
         <p id="exception" style="padding: 10px; background: #ffa;">
-            Error Id: @Model.Guid
+            •	Error Id: @Model.Guid<br />
+            •	Step-by-step instructions on how to reproduce your issue<br />
+            •	Time when error occurred<br />
         </p>
     </div>
 </div>
