--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/Error.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/Error.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="content">
-   <div class="container">
+    <div class="container">
         <h2 style="margin: 10px 0;">
             Sorry, an error occurred while processing your request.
         </h2>
@@ -12,10 +12,12 @@
             @DateTime.Now
         </p>
         <p style="margin: 10px 0;">
-            Please provide Error Id to support team:
+            Please provide below to your support team:
         </p>
         <p id="exception" style="padding: 10px; background: #ffa;">
-            Error Id: @Model.Guid
+            •	Error Id: @Model.Guid<br />
+            •	Step-by-step instructions on how to reproduce your issue<br />
+            •	Time when error occurred<br />
         </p>
     </div>
 </div>
