#118190 - Bug - Default - Mandatory doesn't work for field "Reference number" and Corrected Error message on two views #117376

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Error/BusinessLogicError.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Error/BusinessLogicError.cshtml
@@ -18,9 +18,11 @@
             Please provide below to your support team:
         </p>
         <p id="exception" style="padding: 10px; background: #ffa;">
-            •	Error Id: @Model.Guid<br />
-            •	Step-by-step instructions on how to reproduce your issue<br />
-            •	Time when error occurred<br />
+            <ul>
+                <li>Error Id: @Model.Guid<</li>
+                <li>Step-by-step instructions on how to reproduce your issue</li>
+                <li>Time when error occurred</li>
+            </ul>
         </p>
     </div>
 </div>
