--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCaseWithCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCaseWithCase.cshtml
@@ -32,7 +32,24 @@
     var returnUrl = (string)(ViewBag.ReturnUrl ?? "");
 
 }
+<script type="text/javascript">
+    window.appParameters = {
+        fileUploadWhiteList: [],
+        invalidFileExtensionText: '@Html.Raw(Translation.GetForJS("har inte en giltig filändelse"))'
+    };
 
+    @if (Model.WhiteFilesList != null)
+    {
+        foreach (var fileExtension in Model.WhiteFilesList)
+        {
+        @:window.appParameters.fileUploadWhiteList.push('@fileExtension');
+        }
+        }
+        else
+        {
+            @:window.appParameters.fileUploadWhiteList = null;
+        }
+</script>
 <script type="text/javascript">
 
     window.appParameters = {
@@ -182,7 +199,7 @@
         }
     }
 
-    /*
+    
     //Do not remove, use this when implementing categorization of fileuploads for multiple cases /TAN
     function openClipBoardPopUp(message) {
        $("a[href='#upload_clipboard_file_popup']").trigger("click");
@@ -192,7 +209,7 @@
         $("a[href='#upload_files_popup']").trigger("click");
     }
 
-    */
+    
 </script>
 
 @*@section Styles {
@@ -898,10 +915,10 @@
                         </div>
                     </div>
                 }
-                @if (!Model.CaseOverviewModel.IsFinished && Model.ApplicationType == ApplicationType.SelfService && !Model.CaseOverviewModel.ShowCommunicationForSelfService)
+                @if (!Model.CaseOverviewModel.IsFinished && Model.ApplicationType == ApplicationType.SelfService && !Model.ShowCommunicationForSelfservice)
                 {
                     <div id="logNotesSection">
-                        <h4>@Model.CaseOverviewModel.CaseSectionSettings.GetSectionHeader(CaseSectionType.Communication, CaseSectionsEnglish.CommunicationHeader) </h4>
+                        <h4>@Translation.Get("Communicate") </h4>
                         <div class="row">
                             <div class="col-md-3 dh-col">
                                 <div class="container form-horizontal">
@@ -912,7 +929,7 @@
                                                 <textarea id="logNote" class="col-md-12" style="height: 100px; margin-bottom: 10px;"></textarea>
                                             </div>
                                         </div>
-                                        @if (Model.CaseOverviewModel.CaseLogsModel.IsAttachmentsAllowed)
+                                        @if (Model.CaseLogsModel.IsAttachmentsAllowed)
                                         {
                                             <div class="form-group row">
                                                 <label class="col-md-3">@Translation.GetForCase(GlobalEnums.TranslationCaseFields.Filename.ToString(), @SessionFacade.CurrentCustomerID)</label>
@@ -923,11 +940,11 @@
                                                             <a id="addLogFileFromClipboard" href="#upload_clipboard_file_popup" role="button" class="btn btn-default">@Translation.Get("Add from clipboard")</a>
                                                             <table id="LogFile_table" class="table table-striped table-condensed logFiles" style="margin-top: 10px">
                                                                 <tbody>
-                                                                    @if (Model.CaseOverviewModel.LogFilesModel == null)
-                                                                    {
-                                                                        <div id="no_uploaded_files_label"></div>
-                                                                    }
-                                                                </tbody>
+                                                                        @if (Model.CaseOverviewModel.LogFilesModel == null)
+                                                                        {
+                                                                            <div id="no_uploaded_files_label"></div>
+                                                                        }
+                                                                    </tbody>
                                                             </table>
                                                         </div>
                                                     </div>
@@ -943,7 +960,7 @@
                                             <div class="col-md-3"></div>
                                             <div class="col-md-8">
                                                 <div id="CaseLogPartial" class="onpage com-list">
-                                                    @Html.Partial("_CaseLogNote", Model.CaseOverviewModel.CaseLogsModel)
+                                                    @Html.Partial("_CaseLogNote", Model.CaseLogsModel)
                                                 </div>
                                             </div>
                                         </div>
@@ -952,6 +969,8 @@
                             </div>
                         </div>
                     </div>
+                    @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
+                    @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
                 }
 
                 @if (Model.CaseOverviewModel.IsFinished)
@@ -1029,7 +1048,6 @@
             </div>
         }
     </div>
-
     @*/* only on new for now.. */*@
     @if (Model.AttachmentPlacement == 1 &&
          Model.CaseId == 0 &&
@@ -1038,6 +1056,7 @@
         @Html.Partial("ModalDialogs/_UploadFilePopup", "upload_files_popup")
         isClipboardPopupRequired = true;
     }
+
 </div>
 
 @if (Model.ShowCaseActionsPanelAtBottom & Model.CaseDataModel.FinishingDate == null)
@@ -1072,29 +1091,30 @@
 
 @section Dialogs {
 
-    @* show log notes only for LineManager or if ShowCommunicationForSelfservice is enabled in web.config*@
-    @if (Model.CaseId > 0 &&
-         (Model.ApplicationType == ApplicationType.LineManager ||
-          Model.ApplicationType == ApplicationType.SelfService && Model.ShowCommunicationForSelfservice)
-          && Model.CaseDataModel.FinishingDate == null)
-    {
-        @Html.Partial("_Communication", Model.CaseLogsModel, new ViewDataDictionary(ViewData) { { "readonly", Model.CaseDataModel.IsFinished } })
-        if (Model.CaseLogsModel.IsAttachmentsAllowed)
+     @*show log notes only for LineManager or if ShowCommunicationForSelfservice is enabled in web.config *@
+        @if (Model.CaseId > 0 &&
+             (Model.ApplicationType == ApplicationType.LineManager ||
+              Model.ApplicationType == ApplicationType.SelfService && Model.ShowCommunicationForSelfservice)
+              && Model.CaseDataModel.FinishingDate == null)
         {
-            @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
-            isClipboardPopupRequired = true;
+            @Html.Partial("_Communication", Model.CaseLogsModel)
+            if (Model.CaseLogsModel.IsAttachmentsAllowed)
+            {
+                @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
+                isClipboardPopupRequired = true;
+            }
         }
-    }
 
-    @if (Model.CaseDataModel.IsFinished)
-    {
-        @Html.Partial("ModalDialogs/_CaseLogNotePopup", Model.CaseLogsModel)
-    }
+        @if (Model.CaseDataModel.IsFinished)
+        {
+            @Html.Partial("ModalDialogs/_CaseLogNotePopup", Model.CaseLogsModel)
+        }
 
-    @if (isClipboardPopupRequired)
-    {
-        @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
-    }
-    @Scripts.Render("~/Content/js/Case/log")
-
+        @if (isClipboardPopupRequired)
+        {
+            @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
+        }
+        @Scripts.Render("~/Content/js/Case/log")
+    
+}
 }
